dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_2819779400.log
== SUBMISSION (2025-08-21 16:39:42)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("qual o valor do frete"))
total = var = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:36:34)
-- CODE: 
Quantidade = int(input)("Qual a quantidade de Jogos?")
ValorUnit = float(input)("Qual o valor de cada Jogo?")
Frete = float(input)("qual o valor do frete")
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:37:52)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("qual o valor do frete"))
total = var(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade * ValorUnit + Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:36:02)
-- CODE: 
Quantidade = int(input)("Qual a quantidade de Jogos?")
ValorUnit = float(input)("Qual o valor de cada Jogo?")
Frete = float(input)("qual o valor do frete")
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:36:33)
-- CODE: 
Quantidade = int(input)("Qual a quantidade de Jogos?")
ValorUnit = float(input)("Qual o valor de cada Jogo?")
Frete = float(input)("qual o valor do frete")
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:24:53)
-- CODE: 
ValorUnit = float(input)("Qual a quantidade de Jogos?")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorUnit = float(input)("Qual a quantidade de Jogos?")
                ^^^^^^^^^^^^
TypeError: float() argument must be a string or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:48:20)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = (Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:35:57)
-- CODE: 
Quantidade = int(input)("Qual a quantidade de Jogos?")
ValorUnit = float(input)("Qual o valor de cada Jogo?")
Frete = float(input)("qual o valor do frete")
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:47:54)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:41:09)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("qual o valor do frete"))
total = var = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:36:35)
-- CODE: 
Quantidade = int(input)("Qual a quantidade de Jogos?")
ValorUnit = float(input)("Qual o valor de cada Jogo?")
Frete = float(input)("qual o valor do frete")
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Quantidade = int(input)("Qual a quantidade de Jogos?")
                 ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:43:57)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = var = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(Quantidade * ValorUnit + Frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:47:56)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:47:57)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:47:55)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = input(Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = input(Quantidade * ValorUnit + Frete)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:37:26)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("qual o valor do frete"))
total = var(Quantidade*ValorUnit+Frete)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(Quantidade*ValorUnit+Frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:48:19)
-- CODE: 
Quantidade = int(input("Qual a quantidade de Jogos?"))
ValorUnit = float(input("Qual o valor de cada Jogo?"))
Frete = float(input("Qual o valor do frete"))
total = (Quantidade * ValorUnit + Frete)
print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Qual a quantidade de Jogos?Qual o valor de cada Jogo?Qual o valor do frete618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
